# policywerk

./: .gitignore  CLAUDE.md  CONCEPTS.md  README.md  pyproject.toml
examples/: 01_bellman.md  02_barto_sutton.md  03_td_learning.md  04_q_learning.md  05_dqn.md  06_ppo.md  07_dreamer.md
lessons/: 01_bellman.py  02_barto_sutton.py  03_td_learning.py  04_q_learning.py  05_dqn.py  06_ppo.py  07_dreamer.py
src/policywerk/: __init__.py
src/policywerk/actors/: __init__.py  barto_sutton.py  bellman.py  dqn.py  dreamer.py  ppo.py  q_learner.py  td_learner.py
src/policywerk/building_blocks/: __init__.py  conv.py  dense.py  distributions.py  grad.py  mdp.py  network.py  neuron.py  optimizers.py  policies.py  pool.py  recurrent.py  replay_buffer.py  returns.py  traces.py  value_functions.py
src/policywerk/data/: __init__.py  episode.py  logging.py
src/policywerk/primitives/: __init__.py  activations.py  losses.py  matrix.py  progress.py  random.py  scalar.py  vector.py
src/policywerk/viz/: __init__.py  animate.py  traces.py  trajectories.py  values.py
src/policywerk/world/: __init__.py  balance.py  breakout.py  catcher.py  cliffworld.py  gridworld.py  pixel_pointmass.py  pointmass.py  random_walk.py
tests/: test_actors.py  test_building_blocks.py  test_data.py  test_primitives.py  test_viz.py  test_world.py
