[project]
name = "policywerk"
version = "0.1.0"
description = "Reinforcement learning from scratch, SICP-style — from scalar ops to world models"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = ["matplotlib", "pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/policywerk"]
